fix auth and profile add projects and members
