# src/db/entity/project-invite.entity.ts
@@ -8,17 +8,24 @@ import {
 	PrimaryGeneratedColumn,
 } from 'typeorm';
 import { Account } from './account.entity';
+import { Project } from './project.entity';
 
-@Entity({ name: 'email_verifications' })
-export class EmailVerification extends BaseEntity {
+@Entity({ name: 'project_invites' })
+export class ProjectInvite extends BaseEntity {
 	@PrimaryGeneratedColumn('uuid')
 	id: string;
+
+	@Column({ name: 'project_id', type: 'uuid' })
+	projectId: string;
 
 	@Column({ length: 256 })
 	email: string;
 
-	@Column({ unique: true, length: 256 })
-	code: string;
+	@Column({ unique: true, length: 64 })
+	token: string;
+
+	@Column({ name: 'invited_by', type: 'uuid' })
+	invitedBy: string;
 
 	@Column({
 		name: 'expires_at',
@@ -32,7 +39,11 @@ export class EmailVerification extends BaseEntity {
 	})
 	createdAt: Date;
 
+	@ManyToOne(() => Project, { onDelete: 'CASCADE' })
+	@JoinColumn({ name: 'project_id' })
+	project: Project;
+
 	@ManyToOne(() => Account, { onDelete: 'CASCADE' })
-	@JoinColumn({ name: 'email', referencedColumnName: 'email' })
-	account: Account;
+	@JoinColumn({ name: 'invited_by' })
+	inviter: Account;
 }
